Shelf implementation complete